--- a/java/pom.xml
+++ b/java/pom.xml
@@ -18,11 +18,25 @@
     </properties>
 
     <dependencies>
-        <!-- Auth0 MVC utilities -->
+
+        <!-- Jackson for pretty JSON -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.2</version>
+        </dependency>
+
+        <!-- Auth0 utilities -->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>mvc-auth-commons</artifactId>
             <version>1.11.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.18.3</version>
         </dependency>
 
         <!-- Servlet API provided by container -->
